# ai-transaction-processor

./: .dockerignore  .env.defaults  .gitignore  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: jobs.py
app/core/: config.py  database.py  logging_config.py
app/domain/: enums.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial_schema.py
app/models/: __init__.py  job.py  job_summary.py  transaction.py
app/repositories/: job_repository.py  transaction_repository.py
app/schemas/: job.py  llm.py  transaction.py
app/services/anomaly/: detector.py
app/services/cleaning/: cleaner.py
app/services/llm/: gemini.py  provider.py  retry.py
app/workers/: celery_app.py  tasks.py
docker/: api.Dockerfile  worker.Dockerfile
tests/: test_anomaly.py  test_api.py  test_cleaning.py
