[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-transaction-processor"
version = "0.1.0"
description = "AI-powered async transaction processing pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "celery[redis]>=5.6.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
